<resources>
    <string name="app_name">My Stickers</string>

    <string name="album_registration">Album Registration</string>
    <string name="sticker_quantity">Sticker Quantity</string>
    <string name="shiny">Shiny?</string>
    <string name="category">Category</string>
    <string name="country">Country</string>
    <string name="brazil">Brazil</string>
    <string name="others">Others</string>
    <string name="album_title">Album Title</string>

    <string name="save">Save</string>
    <string name="title_required">The album title is required.</string>
    <string name="qtd_sticker_required">The sticker quantity is required.</string>
    <string name="country_required">Please select a country option.</string>
    <string name="category_required">Please select a category.</string>
    <string name="qtd_sticker_limit">The sticker quantity must be between 0 and 1000.</string>

    <string name="data_saved_successfully">Data saved successfully!</string>

    <string name="clear">Clear</string>
    <string name="form_cleared_successfully">Form cleared successfully</string>

    <string name="about">About</string>
    <string name="utfpr_logo">UTFPR Logo</string>
    <string name="description">Course: XXX Java Technology</string>
    <string name="author">Author: Marlene Moraes</string>
    <string name="email" translatable="false">E-mail: marlenevmoraes@outlook.com</string>
    <string name="app_description">Description: My Stickers is an app developed to facilitate the management of your sticker album collections, by managing your stickers, keeping track of the stickers you are missing and the ones you have, and creating trade lists to share with friends and other collectors.</string>
    <string name="author_site" translatable="false">http://lattes.cnpq.br/1660635383528761</string>
    <string name="no_app_to_open">No app to open web pages</string>
    <string name="contact_app">Contact via App</string>
    <string name="no_app_to_send">No app to send the email</string>

    <string name="album_list">Album List</string>
    <string name="add_album">Add Album</string>
    <string name="new_album">New Album</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok" translatable="false">Ok</string>

    <string name="sports">Sports</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="celebrities">Celebrities</string>
    <string name="cartoons">Cartoons</string>
    <string name="anime_manga">Anime and Manga</string>
    <string name="history_culture">History and Culture</string>
    <string name="nature_science">Nature and Science</string>
    <string name="space_astronomy">Space and Astronomy</string>
    <string name="themed">Themed</string>
    <string name="commemorative_editions">Commemorative Editions</string>
    <string name="games">Games</string>
    <string name="none">None</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="qtd_sticker_integer">The sticker quantity must be an integer</string>
    <string name="suggest_category">Suggest Category</string>
    <string name="spinner_no_values">The Category spinner has no values</string>
    <string name="sorting">Sorting</string>
    <string name="restore_defaults">Restore Defaults</string>
    <string name="restored_installation_default">The settings have restored to the installation default.</string>
    <string name="warning">Warning</string>
    <string name="want_to_delete">Do you want to delete \"%1$s\"?</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_restore_default">Do you want to restore factory settings?</string>

    <string name="undo">Undo</string>
    <string name="update_done">Data update done</string>
    <string name="conversion_error">Type conversion error</string>
    <string name="insert_error">Error to insert</string>
    <string name="update_error">Error to update</string>
    <string name="delete_error">Error to delete</string>
</resources>